--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Avishkar | CC GEN</title>
+    <title>@KuyShare | CC GEN</title>
     <meta name="description" content="VyperDevs">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <script async="" src="https://cdn.sessionstack.com/sessionstack.js"></script>
@@ -885,7 +885,7 @@ max-width: 100%
 <body>
  
 <div id="app">
-    <nav class="navigations"><font color="white" height="80" style="bold">CC GEN | AVISHKAR</font></nav>
+    <nav class="navigations"><font color="white" height="80" style="bold">@KuyShare | CC GEN</font></nav>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -900,7 +900,7 @@ max-width: 100%
  
     </div>
  
- <center> <b>© 2021 Avishkar Patil 😮</b>
+ <center> <b>© 2023 @KuyShare 😮</b>
         
    <script language="javascript" src="https://avipatilpro.github.io/CC_Gen/gen-backend.js"></script>
 
